assets/css/_route_picker.scss
.m-route-picker {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  row-gap: 1rem;
  min-height: 0;
}

.m-route-picker__label {
  @include font-label();
}

.m-route-picker__routes-container {
  flex-grow: 1;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-auto-rows: 1fr;
  grid-template-areas: "all selected";
  gap: 1rem;
  min-height: 0;

  ul {
    min-height: 0;
    background-color: $white;
    border: 1px solid $color-gray-400;
    border-top-left-radius: 6px;
    border-bottom-left-radius: 6px;
    margin: 0;
    padding: 0.5rem;
    overflow-y: scroll;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;

    li {
      position: relative;
    }
  }

  p {
    @include font-small;
    background-color: $white;
    border: 1px solid $color-gray-400;
    border-top-left-radius: 6px;
    border-bottom-left-radius: 6px;
    margin: 0;
    padding: 0.5rem 0.59375rem 0 0.84375rem;
    color: $color-gray-600;
    line-height: calc(4 / 3);
  }
}

@mixin route-picker-button {
  width: 100%;
  font-size: 0.875rem;
  font-weight: 500;
  height: 2.25rem;
  border-radius: 4px;
  line-height: 1;
  display: flex;
  justify-content: center;
  align-items: center;

  &:hover,
  &:focus {
    font-weight: 600;
  }
}

.m-route-picker__route-list {
  grid-area: all;
}

.m-route-picker__route-list-button {
  @include route-picker-button;
  color: $color-gray-700;
  background-color: $color-gray-200;
  border: 1px solid $color-gray-400;

  &:hover {
    color: $color-gray-900;
    background-color: $color-gray-300;
  }

  &:focus {
    color: $color-gray-900;
    background-color: $color-gray-300;
    border: 1px solid $color-gray-500;
  }
}

.m-route-picker__selected-routes {
  grid-area: selected;
}

.m-route-picker__selected-routes-button {
  @include route-picker-button;
  @include button-icon(0.75rem);
  color: $color-gray-100;
  background-color: $color-primary-dark;
  border: 1px solid $color-gray-400;

  span {
    position: absolute;
    top: 0.75rem;
    right: 0.75rem;

    svg {
      stroke: $color-gray-100;
      fill: $color-gray-100;
    }
  }

  &:hover {
    color: $color-gray-50;
    background-color: $color-primary;

    span {
      svg {
        stroke: $color-gray-50;
        fill: $color-gray-50;
      }
    }
  }

  &:focus-within {
    background-color: #324450;
    color: $color-gray-50;
    border: 1px solid $color-primary;

    span {
      svg {
        stroke: $color-gray-50;
        fill: $color-gray-50;
      }
    }
  }
}

